Lesson6 - first commit

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,7 +15,7 @@
     </head>
     <body>
         {% block body %}
-            Hello {{ name }} it's base page
+{#            Hello {{ name }} it's base page#}
         {% endblock %}
     </body>
 </html>
