do not plugin the Forms

--- a/templates/request/add.html.twig
+++ b/templates/request/add.html.twig
@@ -1,8 +1,8 @@
 {% include 'base.html.twig' %}
 
 {% block body %}
-    <h2>Список запросов</h2>
+    <h1>Добавить новый запрос</h1>
     <div>
-        {{ form(adding_form) }}
+        {{ form(form) }}
     </div>
 {% endblock %}
