--- a/templates/request/add.html.twig
+++ b/templates/request/add.html.twig
@@ -3,6 +3,6 @@
 {% block body %}
     <h1>Добавить новый запрос</h1>
     <div>
-        {{ form(form) }}
+        {{ form(addingForm) }}
     </div>
 {% endblock %}
