--- a/templates/request/show.html.twig
+++ b/templates/request/show.html.twig
@@ -1,4 +1,4 @@
-{% include 'base.html.twig' %}
+{% extends 'base.html.twig' %}
 
 {% block body %}
     <a href="{{ path("request.list") }}">К списку</a>
