Lesson 6-COMLITED - 22.11.21 - Added validation and EntutyManager

--- a/templates/request/add.html.twig
+++ b/templates/request/add.html.twig
@@ -1,5 +1,5 @@
 {% extends 'base.html.twig' %}
-
+{% form_theme addingForm 'bootstrap_5_layout.html.twig' %}
 {% block body %}
     <h1>Добавить новый запрос</h1>
     <div>
